--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -5,14 +5,30 @@
 }
 
 .title {
-  grid-column: 1 / span 4;
-  font-size: 48px;
-  font-weight: 800;
   margin: 0;
+  font-size: 32px;
+  grid-column: span 24;
+
+  @include on-tablet {
+    grid-column: span 12;
+  }
+
+  @include on-mobile {
+    grid-column: 1 / -4;
+    grid-row: 2;
+  }
 }
 
 .cartList {
-  grid-column: 1 / span 16;
+  grid-column: span 16;
+
+  @include on-tablet {
+    grid-column: span 12;
+  }
+
+  @include on-mobile {
+    grid-column: span 4;
+  }
 }
 
 .empty {
@@ -24,6 +40,15 @@
 
 .summary {
   grid-column: 17 / 25;
+
+  @include on-tablet {
+    grid-column: span 12;
+    margin-top: 24px;
+  }
+
+  @include on-mobile {
+    grid-column: span 4;
+  }
 
   padding: 32px 24px;
   border: 1px solid #e2e6e9;
