--- a/src/modules/FavoritesPage/FavoritesPage.module.scss
+++ b/src/modules/FavoritesPage/FavoritesPage.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/media";
+
 .page {
   padding-bottom: 80px;
 }
@@ -7,6 +9,14 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+
+  @include on-tablet {
+    grid-column: span 12;
+  }
+
+  @include on-mobile {
+    grid-column: span 2;
+  }
 }
 
 .title {
