--- a/src/shared/components/CartItem/CartRecord.module.scss
+++ b/src/shared/components/CartItem/CartRecord.module.scss
@@ -1,94 +1,125 @@
+@import "../../../styles/media";
+
 .card {
   display: grid;
-  grid-template-columns: 32px 80px 300px 120px auto;
+  grid-template-columns: repeat(24, 1fr);
   align-items: center;
-  margin: 0;
   gap: 24px;
 
   padding: 24px;
   border: 1px solid #e2e6e9;
   background-color: #fff;
-}
 
-.remove {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-
-  transition: opacity 0.2s;
-
-  &:hover {
-    opacity: 0.7;
-  }
-}
-
-.image {
-  width: 80px;
-  height: 80px;
-  object-fit: contain;
-}
-
-.info {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-
-  .title {
-    font-size: 16px;
-    font-weight: 600;
-    color: #0f1121;
+  @include on-tablet {
+    grid-template-columns: repeat(12, 1fr);
   }
 
-  .meta {
-    font-size: 14px;
-    color: #89939a;
+    @include on-mobile {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: auto auto;
+      padding: 16px;
+    }
+
   }
-}
 
-.counter {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-
-  .counterBtn,
-  .counterButton {
+  .remove {
     display: flex;
     align-items: center;
     justify-content: center;
-
     width: 32px;
     height: 32px;
-    border: 1px solid #cbd1d8;
-    background-color: transparent;
-
+    background: transparent;
+    border: none;
     cursor: pointer;
-    transition: background-color 0.2s;
+    transition: opacity 0.2s;
 
     &:hover {
-      background-color: #f1f3f6;
+      opacity: 0.7;
+    }
+
+    .image {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+
+      @include on-mobile {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+    }
+
+    .info {
+      display: flex;
+      flex-direction: column;
+
+      @include on-mobile {
+        grid-column: 3 / 5;
+        grid-row: 1;
+      }
+
+      .title {
+        font-size: 14px;
+        font-weight: 600;
+        color: #0f1121;
+      }
+
+      .meta {
+        font-size: 14px;
+        color: #89939a;
+      }
+    }
+
+    .counter {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+
+      @include on-mobile {
+        grid-column: 1 / 3;
+        grid-row: 2/ 3;
+        justify-self: start;
+      }
+
+      .counterBtn,
+      .counterButton {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        width: 32px;
+        height: 32px;
+        border: 1px solid #cbd1d8;
+        background-color: transparent;
+        cursor: pointer;
+        transition: background-color 0.2s;
+
+        &:hover {
+          background-color: #f1f3f6;
+        }
+      }
+
+      .counterIcon {
+        width: 12px;
+        height: 12px;
+      }
+
+      .quantity {
+        min-width: 20px;
+        text-align: center;
+        font-weight: 600;
+        font-size: 16px;
+      }
+    }
+
+    .price {
+      font-size: 22px;
+      font-weight: 700;
+      color: #0f1121;
+
+      @include on-mobile {
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+        justify-self: end;
+      }
     }
   }
-
-  .counterIcon {
-    width: 12px;
-    height: 12px;
-  }
-
-  .quantity {
-    min-width: 20px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 16px;
-  }
-}
-
-.price {
-  font-size: 22px;
-  font-weight: 700;
-  color: #0f1121;
-}
