--- a/src/shared/components/PicturesSlider/PicturesSlider.module.scss
+++ b/src/shared/components/PicturesSlider/PicturesSlider.module.scss
@@ -126,7 +126,6 @@
     font-size: 32px;
     margin: 24px 0;
     grid-column: 1 / span 4;
-    padding-inline: 16px;
   }
 
   .sliderWrapper {
