--- a/src/shared/components/ProductCard/ProductCard.module.scss
+++ b/src/shared/components/ProductCard/ProductCard.module.scss
@@ -24,7 +24,10 @@
     }
 
     .buttons {
-      justify-content: center;
+      margin-top: auto;
+      display: flex;
+      gap: 8px;
+
     }
 
     .addToCart {
@@ -93,7 +96,8 @@
   margin-bottom: 5px;
 
   @include on-tablet {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
+    margin-top: 8px;
   }
 }
 
@@ -111,7 +115,7 @@
   line-height: 100%;
   color: #89939a;
   text-decoration: line-through;
-  transform: translateY(-3px);
+  transform: translateY(-4px);
 
 }
 
@@ -183,7 +187,7 @@
 
   .favorite {
     background: #fff;
-    border: 1px solid #e2e6e9;
+    border: none;
     border-radius: 4px;
     width: 40px;
     height: 40px;
